src/test/ui/feature-gate-conservative_impl_trait.stderr
error[E0658]: `impl Trait` in return position is experimental (see issue #34511)
  --> $DIR/feature-gate-conservative_impl_trait.rs:11:13
   |
LL | fn foo() -> impl Fn() { || {} }
   |             ^^^^^^^^^
   |
   = help: add #![feature(conservative_impl_trait)] to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
